<resources>
    <string name="app_name">TraceLA</string>

    <string name="friend_req">Request Friend</string>
    <string name="friend_view">View Friends</string>
    <string name="symptoms_survey">Symptoms Survey</string>
    <string name="news">Exposure</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="ucla_id">UCLA ID</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="update_my_location">Update My Location</string>
    <string name="friend_request">Friend Request</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="updating_location_off">Updating Location Off</string>
    <string name="updating_location_on">Updating Location On</string>
    <string name="welcome">Welcome!</string>
    <string name="not_sharing_location_with_friends">Not Sharing Location With Friends</string>
    <string name="sharing_location_with_friends">Sharing Location With Friends</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="check_for_exposure">Check for Exposure</string>

</resources>